Edit bib (mood articles) Edit mood chapter, first draft intro and uni-dimensional measurement. No R code included yet.

--- a/book.bib
+++ b/book.bib
@@ -466,3 +466,286 @@ year = {2016}
   url = {http://yihui.name/knitr/},
 }
 
+@article{Myin-Germeys2016,
+abstract = {PURPOSE OF REVIEW In this review, we discuss feasibility, content, and where possible efficacy of ecological momentary interventions (EMIs) in psychiatry. EMIs adopt mobile devices, such as personal digital assistants or smartphones, for the delivery of treatments in the daily life of patients. We will discuss EMIs in the field of schizophrenia, bipolar disorder and major depression disorder, as well as one generic, transdiagnostic EMI. RECENT FINDINGS The few studies that are available all underscore feasibility and acceptability of mobile health approaches in patients with severe mental illness. In terms of content, there is a huge variety in approaches ranging from a mixture of face-to-face contacts augmented with EMI components to a fully automated EMI. With regard to efficacy, only two randomized clinical trials have been conducted, supporting the efficacy of EMIs in mental health. Evidence seems to point toward greater efficacy when EMI is integrated with real-life assessment using experience sampling methodology, preferentially tailoring the intervention toward the specific needs of the individual as well as toward those moments when intervention is needed. SUMMARY The review demonstrates that mobile health may be an important asset to the mental health field but underscores that it still is in its very early ages. In the discussion, we point toward ways of improving EMIs for severe mental illness, changing our perspective from testing feasibility to testing efficacy and ultimately implementing EMIs in routine mental health services.},
+author = {Myin-Germeys, Inez and Klippel, Annelie and Steinhart, Henrietta and Reininghaus, Ulrich},
+doi = {10.1097/YCO.0000000000000255},
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/MyinGermeys{\_}CoP{\_}2016.pdf:pdf},
+issn = {1473-6578},
+journal = {Current opinion in psychiatry},
+mendeley-groups = {Reviews},
+month = {jul},
+number = {4},
+pages = {258--63},
+pmid = {27153125},
+title = {{Ecological momentary interventions in psychiatry.}},
+url = {http://content.wkhealth.com/linkback/openurl?sid=WKPTLP:landingpage{\&}an=00001504-201607000-00006 http://www.ncbi.nlm.nih.gov/pubmed/27153125},
+volume = {29},
+year = {2016}
+}
+
+
+@article{Desmet2016,
+abstract = {This paper introduces Pick-A-Mood, a character-based pictorial scale for reporting and expressing moods. Pick-A-Mood consists of three characters that each express eight mood states, representing four main categories: excited and cheerful (for energised-pleasant), irritated and tense (for energised-unpleasant), relaxed and calm (for calm-pleasant), and bored and sad (for calm-unpleasant). Using Pick-A-Mood requires little effort on the part of respondents, making it suitable for design research applications in which people often have little time or motivation to report their moods. Contrary to what is often assumed, mood and emotion are distinct phenomena with different measurable manifestations. These differences are discussed, and a review of existing methods is provided, indicating to what extent current methods that measure emotion are suitable for measuring mood. The development and validation of Pick-A-Mood is reported, and application examples and research opportunities are discussed. His research interests are in the fields of design methodology, persuasive technology, digital care collaboration, group awareness and social connectedness. He works in the crossover between health innovation and design, and he has a business-oriented mindset in design research. Natalia Romero Herrera works as an Assistant Professor in the Industrial Design Engineering Faculty at Delft University of Technology. She is an experienced UX/HCI Design Researcher who dedicates her research and education time to developing knowledge and teaching about living labs methodologies in the context of home and work environments. Her main research line aims to supports participants as active collaborators in the design process of innovative sustainable technologies. She investigates how to empower participants in their ability to understand, experiment with and assess the subjective and objective impact of their daily practices.},
+author = {Desmet, Pieter M A and Vastenburg, Martijn H and Romero, Natalia},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Desmet, Vastenburg, Romero - 2016 - Mood measurement with Pick-A-Mood review of current methods and design of a pictorial self-report sc.pdf:pdf},
+journal = {J. Design Research},
+keywords = {design for mood,measurement method review,mood measurement,pictorial affect scale},
+number = {3},
+pages = {241--279},
+title = {{Mood measurement with Pick-A-Mood: review of current methods and design of a pictorial self-report scale}},
+volume = {14},
+year = {2016}
+}
+
+@incollection{Kirchner2013,
+abstract = {(from the chapter) Ecological Momentary Assessment (EMA) is a method for collecting data in real time and in real-world settings. EMA is particularly well suited for studying substance use, because use patterns are highly complex and related to contextual factors like mood, setting, and cues. This chapter addresses the application of EMA to substance use research, outlining principles of EMA design and analysis, and illustrating them with examples from the literature. The chapter considers the way technological innovations are facilitating the rapid evolution of EMA systems, and provides recommendations on current best practices. It reviews data on methodological issues such as compliance and reactivity, and looks forward to the way emerging technologies will enable increasingly unobtrusive assessment of both individual- and systems-level processes over time and space. EMA methods reveal substance use patterns not captured by questionnaires or retrospective data, and hold great promise for substance use research and treatment. (PsycINFO Database Record (c) 2013 APA, all rights reserved) (chapter)},
+author = {Kirchner, Thomas R. and Shiffman, Saul},
+booktitle = {The Wiley-Blackwell Handbook of Addiction Psychopharmacology},
+doi = {10.1002/9781118384404.ch20},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Kirchner, Shiffman - 2013 - Ecological Momentary Assessment.pdf:pdf},
+isbn = {9781119978268},
+issn = {1548-5943},
+keywords = {EMA sampling design,EMA-based treatment,Ecological Momentary Assessment (EMA),Ecological momentary intervention (EMI),Substance abuse research},
+mendeley-groups = {vision papers},
+pages = {541--565},
+pmid = {18509902},
+title = {{Ecological Momentary Assessment}},
+year = {2013}
+}
+
+@misc{Serre2015,
+abstract = {Background: Craving is viewed as a major determinant of relapse in persons with substance addiction, but this association remains poorly understood due to its time-limited nature and the biases associated with retrospective reporting. Ecological momentary assessment (EMA) offers new opportunities to examine both craving and substance use with strong ecological validity by collecting real-time data in daily life. This review examined all published studies using EMA to: (1) assess the link between craving and substance use; and (2) identify relevant moderators of craving among substance users. Methods: We searched PubMed and PsycInfo databases up to October 31, 2013. Results: Ninety-one studies were selected, involving mostly tobacco smokers (73{\%}). A majority of studies (92{\%}) reported a positive relationship between craving and substance use, concurrently and prospectively, and among users with different levels of use for both legal and illegal substances. Results suggest that craving is a stronger predictor of relapse episodes when assessed in close temporal proximity to substance use. EMA data also confirmed the influence of diverse within-person and between-person sources of variation in daily life craving reports. Conclusions: This review provides strong support for the link between craving and substance use, and underscores the importance of the timing of assessments.},
+author = {Serre, Fuschia and Fatseas, Melina and Swendsen, Joel and Auriacombe, Marc},
+booktitle = {Drug and Alcohol Dependence},
+doi = {10.1016/j.drugalcdep.2014.12.024},
+file = {::},
+isbn = {1879-0046 (Electronic)$\backslash$r0376-8716 (Linking)},
+issn = {18790046},
+keywords = {Craving,Ecological momentary assessment,Experience sampling methodology,Relapse,Systematic review},
+pmid = {25637078},
+title = {{Ecological momentary assessment in the investigation of craving and substance use in daily life: A systematic review}},
+year = {2015}
+}
+
+@misc{Engel2016,
+abstract = {Our current understanding of the etiology and maintenance of eating disorders and obesity continues to be far from complete. Similarly, our understanding of determinants of both successful and unsuccessful weight loss surgery is also quite limited. While a number of research methodologies have been applied to these areas, one methodology that has recently seen a rise in popularity is the use of ecological momentary assessment (EMA). EMA allows one to study a variety of variables of interest in the natural environment. The study of eating disorders, obesity, and bariatric surgery has all been conducted using EMA recently. The current study is a review of these areas and summarizes the recent literature (past 3 years) in eating disorders, obesity, and bariatric surgery using EMA methodology.},
+archivePrefix = {arXiv},
+arxivId = {NIHMS150003},
+author = {Engel, Scott G. and Crosby, Ross D. and Thomas, Graham and Bond, Dale and Lavender, Jason M. and Mason, Tyler and Steffen, Kristine J. and Green, Dan D. and Wonderlich, Stephen A.},
+booktitle = {Current Psychiatry Reports},
+doi = {10.1007/s11920-016-0672-7},
+eprint = {NIHMS150003},
+file = {::},
+isbn = {0000000000000},
+issn = {15351645},
+keywords = {Bariatric surgery,Disordered eating,Eating disorders,Ecological momentary assessment,Gastric bypass surgery,Momentary assessment,Naturalistic assessment,Obesity},
+mendeley-groups = {Reviews},
+number = {4},
+pages = {1--9},
+pmid = {26893235},
+title = {{Ecological Momentary Assessment in Eating Disorder and Obesity Research: a Review of the Recent Literature}},
+volume = {18},
+year = {2016}
+}
+
+
+@article{Moore2016,
+abstract = {As mobile data capture tools for patient-reported outcomes proliferate in clinical research, a key dimension of measure performance is sensitivity to change. This study compared performance of patient-reported measures of mindfulness, depression, and anxiety symptoms using traditional paper-and-pencil forms versus real-time, ambulatory measurement of symptoms via ecological momentary assessment (EMA). Sixty-seven emotionally distressed older adults completed paper-and-pencil measures of mindfulness, depression, and anxiety along with two weeks of identical items reported during ambulatory monitoring via EMA before and after participation in a randomized trial of Mindfulness-Based Stress Reduction (MBSR) or a health education intervention. We calculated effect sizes for these measures across both measurement approaches and estimated the Number-Needed-to-Treat (NNT) in both measurement conditions. Study outcomes greatly differed depending on which measurement method was used. When EMA was used to measure clinical symptoms, older adults who participated in the MBSR intervention had significantly higher mindfulness and significantly lower depression and anxiety than participants in the health education intervention at post-treatment. However, these significant changes in symptoms were not found when outcomes were measured with paper-and-pencil measures. The NNT for mindfulness and depression measures administered through EMA were approximately 25-50{\%} lower than NNTs derived from paper-and-pencil administration. Sensitivity to change in anxiety was similar across administration modes. In conclusion, EMA measures of depression and mindfulness substantially outperformed paper-and-pencil measures with the same items. The additional resources associated with EMA in clinical trials would seem to be offset by its greater sensitivity to detect change in key outcome variables.},
+archivePrefix = {arXiv},
+arxivId = {15334406},
+author = {Moore, Raeanne C. and Depp, Colin A. and Wetherell, Julie Loebach and Lenze, Eric J.},
+doi = {10.1016/j.jpsychires.2016.01.011},
+eprint = {15334406},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Moore et al. - 2016 - Ecological momentary assessment versus standard assessment instruments for measuring mindfulness, depressed mood,.pdf:pdf},
+isbn = {0022-3956},
+issn = {18791379},
+journal = {Journal of Psychiatric Research},
+keywords = {Ecological momentary assessment,Mindfulness-based stress reduction,Mobile assessment,Patient reported outcomes,Psychometrics,Randomized clinical trial},
+mendeley-groups = {Methodology},
+pages = {116--123},
+pmid = {26851494},
+title = {{Ecological momentary assessment versus standard assessment instruments for measuring mindfulness, depressed mood, and anxiety among older adults}},
+volume = {75},
+year = {2016}
+}
+
+@article{Dunton2017,
+abstract = {Theories explaining why individuals participate in physical activity often do not take into account within-person variation or dynamic patterns of change. Time-intensive methods such as Ecological Momentary Assessment are more conducive to capturing time- and spatially-varying explanatory factors and intraindividual fluctuations than traditional methods and thus may yield new insights into the prediction and modeling of physical activity behavior.},
+author = {Dunton, Genevieve Fridlund},
+doi = {10.1249/JES.0000000000000092},
+file = {::},
+isbn = {0000000000000},
+issn = {15383008},
+journal = {Exercise and Sport Sciences Reviews},
+keywords = {Ecological Momentary Assessment,health behavior theory,intraindividual variability,methods,multilevel modeling,physical activity,sedentary behavior},
+mendeley-groups = {Outcomes},
+number = {1},
+pages = {48--54},
+pmid = {27741022},
+title = {{Ecological Momentary Assessment in Physical Activity Research}},
+volume = {45},
+year = {2017}
+}
+
+@article{Marszalek2014,
+abstract = {OBJECTIVE The purpose of this study was to assess the value of ecological momentary assessment in evaluating physical activity among children, adolescents, and adults. It also determines whether ecological momentary assessment fulfills the criteria of validity, reliability, objectivity, norms, and standardization applied to the tools used for the evaluation of physical activity. METHODS The EBSCO-CINHAL, Medline, PsycINFO, PubMed, and SPORTDiscuss databases were reviewed in December 2012 for articles associated with EMA. RESULTS Of the 20 articles examined, half (10) used electronic methods for data collection, although various methods were used, ranging from pen and paper to smartphone applications. Ten studies used objective monitoring equipment. Nineteen studies were performed over 4 days. While the validity of the EMA method was discussed in 18 studies, only four found it to be objective. In all cases, the EMA procedures were precisely documented and confirmed to be feasible. CONCLUSIONS Ecological momentary assessment is a valid, reliable, and feasible approach to evaluate activity and sedentary behavior. Researchers should be aware that while ecological momentary assessment offers many benefits, it simultaneously imposes many limitations which should be considered when studying physical activity.},
+author = {Marszalek, Jolanta and Morgulec-Adamowicz, Natalia and Rutkowska, Izabela and Kosmol, Andrzej},
+doi = {10.1155/2014/915172},
+file = {::},
+issn = {2314-6141},
+journal = {BioMed research international},
+mendeley-groups = {Reviews},
+pages = {915172},
+pmid = {25126580},
+title = {{Using ecological momentary assessment to evaluate current physical activity.}},
+url = {http://www.hindawi.com/journals/bmri/2014/915172/abs/, http://www.hindawi.com/journals/bmri/2014/915172/abs/{\%}5Cnhttp://downloads.hindawi.com/journals/bmri/2014/915172.pdf{\%}5Cnhttp://www.hindawi.com/journals/bmri/2014/915172/{\%}5Cnhttp://www.ncbi.nlm.nih.gov/ http://www.ncbi.nlm.nih.gov/pubmed/25126580 http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=PMC4122013},
+volume = {2014},
+year = {2014}
+}
+
+@article{Beedie2005,
+abstract = {Most academics agree that emotions and moods are related but distinct phenomena. The present study assessed emotion-mood distinctions among a non-academic population and compared these views with distinctions proposed in the literature. Content analysis of responses from 106 participants identified 16 themes, with cause (65{\%} of respondents), duration (40{\%}), control (25{\%}), experience (15{\%}), and consequences (14{\%}) the most frequently cited distinctions. Among 65 contributions to the academic literature, eight themes were proposed, with duration (62{\%} of authors), intentionality (41{\%}), cause (31percnt;), consequences (31{\%}), and function (18{\%}) the most frequently cited. When the eight themes cited by both academics and non-academics were rank ordered, approximately 60{\%} overlap in opinion was evident. A data-derived summary of emotion-mood distinctions is provided. These data should prove useful to investigators interested in developing a clearer scientific distinction between emotion and mood than is currently},
+author = {Beedie, Christopher and Terry, Peter and Lane, Andrew},
+doi = {10.1080/02699930541000057},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Beedie, Terry, Lane - 2005 - Distinctions between emotion and mood.pdf:pdf},
+isbn = {0269-9931},
+issn = {0269-9931},
+journal = {Cognition {\&} Emotion},
+month = {sep},
+number = {6},
+pages = {847--878},
+title = {{Distinctions between emotion and mood}},
+url = {http://www.tandfonline.com/doi/abs/10.1080/02699930541000057},
+volume = {19},
+year = {2005}
+}
+
+@article{Cranford2006,
+abstract = {The recent growth in diary and experience sampling research has increased research attention on how people change over time in natural settings. Often however, the measures in these studies were originally developed for studying between-person differences, and their sensitivity to within-person changes is usually unknown. Using a Generalizability Theory framework, the authors illustrate a procedure for developing reliable measures of change using a version of the Profile of Mood States (POMS; McNair, Lorr, {\&} Droppleman, 1992) shortened for diary studies. Analyzing two data sets, one composed of 35 daily reports from 68 persons experiencing a stressful examination and another composed of daily reports from 164 persons over a typical 28-day period, we demonstrate that three-item measures of anxious mood, depressed mood, anger, fatigue, and vigor have appropriate reliability to detect within-person change processes.},
+author = {Cranford, James A. and Shrout, Patrick E. and Iida, Masumi and Rafaeli, Eshkol and Yip, Tiffany and Bolger, Niall},
+doi = {10.1177/0146167206287721},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Cranford et al. - 2006 - A Procedure for Evaluating Sensitivity to Within-Person Change Can Mood Measures in Diary Studies Detect Change.pdf:pdf},
+isbn = {0146-1672 (Print)$\backslash$r0146-1672 (Linking)},
+issn = {0146-1672},
+journal = {Personality and Social Psychology Bulletin},
+keywords = {daily mood,diary studies,generalizability theory,reliability,within-person change},
+mendeley-groups = {Methodology/Psychometrics},
+number = {7},
+pages = {917--929},
+pmid = {16738025},
+title = {{A Procedure for Evaluating Sensitivity to Within-Person Change: Can Mood Measures in Diary Studies Detect Change Reliably?}},
+url = {http://journals.sagepub.com/doi/10.1177/0146167206287721},
+volume = {32},
+year = {2006}
+}
+
+@article{VanBallegooijen2016,
+abstract = {Ecological momentary assessment (EMA) of mental health symptoms may influence the symptoms that it measures, i.e. assessment reactivity. In the field of depression, EMA reactivity has received little attention. We aim to investigate whether EMA of depressive symptoms induces assessment reactivity. Reactivity will be operationalised as an effect of EMA on depressive symptoms measured by a retrospective questionnaire, and, secondly, as a change in response rate and variance of the EMA ratings. This study is a 12-week randomised controlled trial comprising three groups: group 1 carries out EMA of mood and completes a retrospective questionnaire, group 2 carries out EMA of how energetic they feel and completes a retrospective questionnaire, group 3 is the control group, which completes only the retrospective questionnaire. The retrospective questionnaire (Centre for Epidemiologic Studies Depression scale; CES-D) assesses depressive symptoms and is administered at baseline, 6 weeks after baseline and 12 weeks after baseline. We aim to recruit 160 participants who experience mild to moderate depressive symptoms, defined as a Patient Health Questionnaire (PHQ-9) score of 5 to 15. This study is powered to detect a small between-groups effect, where no clinically relevant effect is defined as the effect size margin −0.25{\textless} d {\textless}0.25. To our knowledge, this is the first study to investigate whether self-rated EMA of depressive symptoms could induce assessment reactivity among mildly depressed individuals. Netherlands Trial Register NTR5803. Registered 12 April 2016. http://www.trialregister.nl/trialreg/admin/rctview.asp?TC=5803 .},
+author = {van Ballegooijen, Wouter and Ruwaard, Jeroen and Karyotaki, Eirini and Ebert, David D. and Smit, Johannes H. and Riper, Heleen},
+doi = {10.1186/s12888-016-1065-5},
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/vanBallegooijen{\_}BMCP{\_}2016.pdf:pdf},
+isbn = {1288801610},
+issn = {1471-244X},
+journal = {BMC Psychiatry},
+keywords = {Ecological momentary assessment,Experience samplin,assessment reactivity,ballegooijen,correspondence,depression,ecological momentary assessment,experience sampling,mobile health,mood,nl,smartphones,van,vu,w},
+mendeley-groups = {Methodology/Psychometrics/reactivity},
+number = {1},
+pages = {359},
+publisher = {BMC Psychiatry},
+title = {{Reactivity to smartphone-based ecological momentary assessment of depressive symptoms (MoodMonitor): protocol of a randomised controlled trial}},
+url = {http://bmcpsychiatry.biomedcentral.com/articles/10.1186/s12888-016-1065-5},
+volume = {16},
+year = {2016}
+}
+
+@article{VandeVen2017,
+abstract = {In this paper we introduce a new Android library, called ULTEMAT, for the delivery of ecological momentary assessments (EMAs) on mobile devices and we present its use in the MoodBuster app developed in the H2020 E-COMPARED project. We discuss context-aware, or event-based, triggers for the presentation of EMAs and discuss the potential they have to improve the effectiveness of mobile provision of mental health interventions as they allow for the delivery of assessments to the patients when and where these are most appropriate. Following this, we present the abilities of ULTEMAT to use such context-aware triggers to schedule EMAs and we discuss how a similar approach can be used for Ecological Momentary Interventions (EMIs).},
+author = {van de Ven, Pepijn and O'Brien, Hugh and Henriques, Ricardo and Klein, Michel and Msetfi, Rachel and Nelson, John and Rocha, Artur and Ruwaard, Jeroen and O'Sullivan, Donal and Riper, Heleen},
+doi = {10.1016/j.invent.2017.07.001},
+file = {::},
+issn = {22147829},
+journal = {Internet Interventions},
+keywords = {Context awareness,EMA,Experience sampling,In the moment assessments},
+mendeley-groups = {NEW},
+pages = {74--81},
+title = {{ULTEMAT: A mobile framework for smart ecological momentary assessments and interventions}},
+volume = {9},
+year = {2017}
+}
+
+@article{Groot2010,
+abstract = {BACKGROUND: A dichotomous ICD-10 or DSM-IV diagnosis of depression does not fully capture its natural phenotype: a dimensional continuum of environmentally reactive fluctuations in mood. Therefore, ICD and DSM labels of depression, although useful from a service perspective, fail to help patients directly. This paper will show, using the author's experiences as an example, that patients with mood disorders can "diagnose" the natural phenotype, in the sense that systematic recording of painful fluctuations in environmentally reactive moods by the patient him- or herself may: (i) not only provide an accurate assessment of depression, but (ii) result in a process of conscious awareness of aberrant responses to the environment - a first step on the way to recovery.$\backslash$n$\backslash$nMETHOD: The author developed a rudimentary but useable method to diagnose his dynamic mood fluctuations over the years. The continuous assessment method allowed him to systematically score his mood and activities every day, enabling him to study and analyse in detail the course and context of mood symptoms over time.$\backslash$n$\backslash$nRESULTS: With time, this initial strategy evolved into a new, more informed, more empowered diagnosis of his problems and ultimately contributed to a more resilient mind set with regard to mood changes and ways of active rather than avoidant coping with them.$\backslash$n$\backslash$nCONCLUSIONS: Many people with mood problems receive a DSM label but are not taught to engage in diagnosing what depression is: a dynamic pattern of environmentally reactive mood responses. Continuous diagnostic self-assessment strategies may help patients to learn, adjust and cope with their emotional vulnerabilities expressed as dimensional and reactive variation in mood. Patients can be empowered to diagnose experiences as a means to understand the sources and consequences of continuous mood variation over time.},
+author = {Groot, Peter C.},
+doi = {10.3109/09638237.2010.494188},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Groot - 2010 - Patients can diagnose too How continuous self-assessment aids diagnosis of, and recovery from, depression.pdf:pdf},
+isbn = {1360-0567},
+issn = {09638237},
+journal = {Journal of Mental Health},
+keywords = {Depression,diagnosis,self-help devices,self-help groups},
+mendeley-groups = {Instruments/psymate,Groups/Groups-NL/Maastricht},
+number = {4},
+pages = {352--362},
+pmid = {20636115},
+title = {{Patients can diagnose too: How continuous self-assessment aids diagnosis of, and recovery from, depression}},
+volume = {19},
+year = {2010}
+}
+
+
+@article{Wenze2010,
+abstract = {Ecological momentary assessment (EMA) entails repeated, intensive sampling of respondents' current experiences while they are engaged in their typical daily routines, in their natural environments. In this article we discuss benefits of using EMA techniques in mood disorders research, provide an overview of the various specific EMA techniques that have been used with mood-disordered populations to date, and summarize the diverse range of research questions that EMA has been used to explore in this field. In addition, we evaluate the feasibility and acceptability of using EMA techniques with this population and suggest additional areas that might be fruitful to investigate, with a focus on the extension of EMA techniques into treatment research. Overall, data suggest that using EMA techniques in mood disorders research is feasible, generally acceptable, and highly promising. We conclude with a discussion of caveats, limitations, and ethical considerations.},
+author = {Wenze, Susan J. and Miller, Ivan W.},
+doi = {10.1016/j.cpr.2010.06.007},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Wenze, Miller - 2010 - Use of ecological momentary assessment in mood disorders research.pdf:pdf},
+isbn = {0272-7358},
+issn = {1873-7811},
+journal = {Clinical psychology review},
+keywords = {Bipolar disorder,Depression,Ecological momentary assessment,Experience sampling,Mood disorder},
+mendeley-groups = {Disorders/Mood,Reviews},
+month = {aug},
+number = {6},
+pages = {794--804},
+pmid = {20619520},
+title = {{Use of ecological momentary assessment in mood disorders research.}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0272735810001017 http://www.ncbi.nlm.nih.gov/pubmed/20619520},
+volume = {30},
+year = {2010}
+}
+
+@article{Starr2012,
+abstract = {Research suggests that anxiety disorders tend to temporally precede depressive disorders, a finding potentially relevant to understanding comorbidity. The current study used diary methods to determine whether daily anxious mood also temporally precedes daily depressed mood. 55 participants with generalized anxiety disorder (GAD) and history of depressive symptoms completed a 21-day daily diary tracking anxious and depressed mood. Daily anxious and depressed moods were concurrently associated. Daily anxious mood predicted later depressed mood at a variety of time lags, with significance peaking at a two-day lag. Depressed mood generally did not predict later anxious mood. Results suggest that the temporal antecedence of anxiety over depression extends to daily symptoms in GAD. Implications for the efinement of comorbidity models, including causal theories, are discussed. ?? 2011 Elsevier Ltd.},
+archivePrefix = {arXiv},
+arxivId = {NIHMS150003},
+author = {Starr, Lisa R. and Davila, Joanne},
+doi = {10.1016/j.brat.2011.11.005},
+eprint = {NIHMS150003},
+file = {:Users/lckooistra/Library/Application Support/Mendeley Desktop/Downloaded/Starr, Davila - 2012 - Temporal patterns of anxious and depressed mood in generalized anxiety disorder A daily diary study.pdf:pdf},
+isbn = {2122633255},
+issn = {00057967},
+journal = {Behaviour Research and Therapy},
+keywords = {Anxiety,Comorbidity,Depression,Generalized anxiety disorder,Symptom co-occurrence},
+pmid = {22196213},
+title = {{Temporal patterns of anxious and depressed mood in generalized anxiety disorder: A daily diary study}},
+year = {2012}
+}
+
+@article{VanRijsbergen2014,
+abstract = {Mood is a key element of Major Depressive Disorder (MDD), and is perceived as a highly dynamic construct. The aim of the current study was to examine whether a single-item mood scale can be used for mood monitoring. One hundred thirty remitted out-patients were assessed using the Structured Clinical Interview for DSM-IV Axis-I Disorders (SCID-I), Visual Analogue Mood Scale (VAMS), 17-item Hamilton Depression Rating Scale (HAM-D17), and Inventory of Depressive Symptomatology-Self Report (IDS-SR). Of all patients, 13.8{\%} relapsed during follow-up assessments. Area under the curves (AUCs) for the VAMS, HAM-D17and IDS-SR were 0.94, 0.91, and, 0.86, respectively. The VAMS had the highest positive predictive value (PPV) without any false negatives at score 55 (PPV=0.53; NPV=1.0) and was the best predictor of current relapse status (variance explained for VAMS: 60{\%}; for HAM-D17:49{\%}; for IDS-SR: 34{\%}). Only the HAM-D17added significant variance to the model (7{\%}). Assessing sad mood with a single-item mood scale seems to be a straightforward and patient-friendly avenue for life-long mood monitoring. Using a diagnostic interview (e.g., the SCID) in case of a positive screen is warranted. Repeated assessment of the VAMS using Ecological Momentary Assessment (EMA) might reduce false positives.},
+author = {van Rijsbergen, Gerard D. and Burger, Huibert and Hollon, Steven D. and Elgersma, Hermien J. and Kok, Gemma D. and Dekker, Jack and de Jong, Peter J. and Bockting, Claudi L.H.},
+doi = {10.1016/j.psychres.2014.06.052},
+file = {:Users/lckooistra/Google Drive/New Literature/Mendeley/Rijsbergen{\_}2014{\_}PR.pdf:pdf},
+isbn = {0165-1781},
+issn = {18727123},
+journal = {Psychiatry Research},
+keywords = {Affect,Depression,Relapse,Screening,Sensitivity,Specificity,Visual analogue scale},
+number = {1-2},
+pages = {287--293},
+pmid = {25070177},
+publisher = {Elsevier},
+title = {{How do you feel? Detection of recurrent Major Depressive Disorder using a single-item screening tool}},
+url = {http://dx.doi.org/10.1016/j.psychres.2014.06.052},
+volume = {220},
+year = {2014}
+}
+
